--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mimic-fi/helpers",
-  "version": "1.0.0-rc.4",
+  "version": "1.0.0",
   "license": "GPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
